tests-integration/tests/snapshots/test__nested_root__check_after.snap
---
source: tests-integration/tests/test.rs
expression: "&report"
---
{
  "files": [
    {
      "outcome": "clean",
      "path": "main.rs"
    }
  ]
}
