tests-integration/tests/snapshots/test__nested_root__check_before.snap
---
source: tests-integration/tests/test.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": false,
      "path": "main.rs",
      "status": "missing"
    }
  ]
}
