tests-integration/tests/snapshots/test__nested_root__format.snap
---
source: tests-integration/tests/test.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": true,
      "path": "main.rs",
      "status": "missing"
    }
  ]
}
