tests-integration/tests/snapshots/test__nested_root__format_idempotent.snap
---
source: tests-integration/tests/test.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": false,
      "path": "main.rs",
      "status": "clean"
    }
  ]
}
