tests-integration/tests/snapshots/test__nested_root__tree_before.snap
---
source: tests-integration/tests/test.rs
expression: tree_snapshot(root)
---
=== .gitignore ===
source/ignored.rs␊
=== licenserc.toml ===
[header]␊
text = "Copyright 2026 Nested Root"␊
␊
[files]␊
excludes = ["generated.rs"]␊
includes = ["**/*.rs"]␊
root = "source"␊
␊
[git]␊
ignore = "enable"␊
=== source/generated.rs ===
fn generated() {}␊
=== source/ignored.rs ===
fn ignored() {}␊
=== source/main.rs ===
fn main() {}␊
